# react-native-cxx-turbo-module

./: AwesomeLibrary.podspec  CPP_DEVELOPMENT.md  CPP_INTEGRATION.md  LICENSE  README.md  package-lock.json  package.json  react-native.config.js
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/java/com/awesomelibrary/: AwesomeLibraryCpp.kt  AwesomeLibraryModule.kt  AwesomeLibraryPackage.kt
cpp/: QRCodeModule.cpp  QRCodeModule.h
example/: README.md  package.json
example/android/app/: build.gradle
example/ios/AwesomeLibraryExample.xcodeproj/: project.pbxproj
example/src/: App.tsx  TestScreen.tsx
ios/: AwesomeLibrary.mm  AwesomeLibraryModuleProvider.h  AwesomeLibraryModuleProvider.mm
shared/: NativeQRCodeModule.cpp  NativeQRCodeModule.h  TPEncoder.cpp  TPEncoder.hpp  example.cpp  react-native-qrcode.cpp  react-native-qrcode.h
specs/: NativeQRCodeModule.ts
src/: NativeAwesomeLibrary.ts  NativeQRCodeModule.ts  index.tsx
